[package]
name = "steam-screenshots-vdf-joiner"
version = "0.1.0"
edition = "2024"

[dependencies]
better-vdf = { version = "0.1.0", git = "https://github.com/tapnisu/better-vdf", branch = "feat/allow-key-absence" }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
